ci(android): fix expo prebuild flag --clear -> --clean in workflows\n\nExpo CLI v50+ uses --clean. This resolves 'unknown or unexpected option: --clear' errors during CI prebuild.

--- a/.github/workflows/build-apk-fixed.yml
+++ b/.github/workflows/build-apk-fixed.yml
@@ -61,7 +61,7 @@ jobs:
     - name: Generate Android project
       run: |
         echo "Generating Android project..."
-        npx expo prebuild --platform android --clear
+        npx expo prebuild --platform android --clean
         echo "Android project generated successfully"
         
     - name: Verify Android project structure
