--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -42,7 +42,7 @@ jobs:
       run: npm ci
       
     - name: Prebuild Android project
-      run: npx expo prebuild --platform android --clear
+      run: npx expo prebuild --platform android --clean
       
     - name: Build APK
       run: |
