ci(android): increase Gradle verbosity to surface real failure\n\n- Add --warning-mode all and --console=plain\n- Ensure --stacktrace and --info are enabled\n- Apply to release and debug workflows

--- a/.github/workflows/build-apk-fixed.yml
+++ b/.github/workflows/build-apk-fixed.yml
@@ -88,7 +88,7 @@ jobs:
         chmod +x gradlew
         echo "Starting Gradle build..."
         ./gradlew clean
-        ./gradlew assembleRelease --no-daemon --stacktrace --info --max-workers=2
+        ./gradlew assembleRelease --no-daemon --stacktrace --info --warning-mode all --console=plain --max-workers=2
         
     - name: Check APK output
       run: |
