--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -47,7 +47,7 @@ jobs:
     - name: Build APK
       run: |
         cd android
-        ./gradlew assembleRelease
+        ./gradlew assembleRelease --no-daemon --stacktrace --info --warning-mode all --console=plain
         
     - name: Upload APK artifact
       uses: actions/upload-artifact@v4
