fix(android): resolve Java 17 Gradle daemon compatibility
- Remove MaxPermSize JVM option (deprecated since Java 8)
- Add --stop daemon command to clear cached JVM options
- Update gradle.properties with Java 17 compatible args
- Apply to all Android build workflows

Fixes: Unrecognized VM option 'MaxPermSize=512m' error

--- a/.github/workflows/build-apk-fixed.yml
+++ b/.github/workflows/build-apk-fixed.yml
@@ -87,6 +87,8 @@ jobs:
         cd android
         chmod +x gradlew
         echo "Starting Gradle build..."
+        # Stop any existing daemons to clear cached JVM options
+        ./gradlew --stop || true
         ./gradlew clean
         ./gradlew assembleRelease --no-daemon --stacktrace --info --warning-mode all --console=plain --max-workers=2
         
