--- a/eas.json
+++ b/eas.json
@@ -20,7 +20,7 @@
     },
     "production": {
       "android": {
-        "buildType": "apk"
+        "buildType": "aab"
       },
       "ios": {
         "simulator": false
