--- a/.github/workflows/build-aab-production.yml
+++ b/.github/workflows/build-aab-production.yml
@@ -66,7 +66,7 @@ jobs:
         fi
         
     - name: Setup signing keystore
-      if: ${{ secrets.ANDROID_KEYSTORE_BASE64 != '' }}
+      if: ${{ secrets.ANDROID_KEYSTORE_BASE64 }}
       run: |
         echo "Setting up signing keystore..."
         mkdir -p android/app
@@ -114,7 +114,7 @@ jobs:
         sed -i "s/versionName \".*\"/versionName \"$VERSION_NAME\"/" android/app/build.gradle
         
     - name: Configure release signing in build.gradle
-      if: ${{ secrets.ANDROID_KEYSTORE_BASE64 != '' }}
+      if: ${{ secrets.ANDROID_KEYSTORE_BASE64 }}
       run: |
         # Use Python to properly modify build.gradle
         python3 << 'EOF'
